fixed table overflow

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@
     margin-right: 35px;
     border-radius: 12px;
     color: white;
+    min-width: 1000px;
+}
+
+.min-width-180 {
+    min-width: 180px;
 }
 
 .flex {
@@ -137,6 +142,7 @@ a {
 }
 
 table {
+    table-layout: fixed;
     border-collapse: collapse;
     width: 100%;
 }
@@ -147,6 +153,7 @@ td, th {
     background-color: white;
     padding: 20px;
     color: #222222;
+    overflow: hidden;
 }
 
 th {
